--- a/gb/9/10/26/n2701154.md
+++ b/gb/9/10/26/n2701154.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yupkxx301/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yupkxx301/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/yupkxx301/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yupkxx301/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/yupkxx301/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yupkxx301/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/yupkxx301/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yupkxx301/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/yupkxx301/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yupkxx301/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/yupkxx301/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yupkxx301/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/yupkxx301/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yupkxx301/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/yupkxx301/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yupkxx301/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/yupkxx301/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yupkxx301/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/yupkxx301/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yupkxx301/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yupkxx301/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yupkxx301/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yupkxx301/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>10大惊世宝藏 橡树下藏1亿美元“钱坑”</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/2a0e42ff33115d122cede6621004a38e-320x200.jpg" />
+
 <h6></h6>
 <hr>
-	<p>【大纪元10月26日讯】10大惊世<ahref="https://github.com/yupkxx301/djy/blob/master/gb/tag/%E5%AE%9D%E8%97%8F.md#1">宝藏</a>今何在？</p>
+	<p>【大纪元10月26日讯】10大惊世<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%AE%9D%E8%97%8F.md#1">宝藏</a>今何在？</p>
 <p><B>一、洛豪德岛的海盗遗产 </B></p>
-<p>在澳大利亚，有一个名为洛豪德的小岛，该岛并非鸟语花香、景色宜人的胜地，然而，“岛不在美，有宝则名”。相传岛上藏有无数财宝，周围海底也铺满耀眼炫目的宝石。17世纪70年代，一位名叫威廉?菲波斯的人，在偶然中发现一张有关洛豪德岛的地图，图上标有西班牙商船“黄金”号的沉没地，他惊喜若狂，感觉到一个发财的机会到来了。原来，“黄金”号商船有一段神秘的故事，那是在16世纪50～70年代，西班牙人沿着哥伦布的航迹远征美洲，从印地安人手里掠夺了无数金银珠宝，然后载满船舱回国。然而，他们的行动被海盗们觉察了。于是，海盗们疯狂袭击每一艘过往的商船，惨杀船员，抢夺了大量财宝。如山沉重的财宝，海盗们无法全部带走，于是将剩余部分埋藏在洛豪德岛，并绘制了藏宝图，海贼们发血誓表示严守秘密，以图永享这笔不义之财。哪知海盗们终归是海盗，哪有信用可言，一些阴谋者企图独吞<ahref="https://github.com/yupkxx301/djy/blob/master/gb/tag/%E5%AE%9D%E8%97%8F.md#1">宝藏</a>，一时间血肉横飞，一场火拼留下了具具尸体，胜利者携带藏宝图混迹天下，过着花天酒地、骄奢淫逸的生活，而藏金岛的传说也不胫而走，风靡世界。菲波斯怀揣这张不知真假的藏宝图，登上荒岛，四处勘察，然而他一无所获。正当他徘徊海滩时，无意中脚陷入沙中，触及到一块异物，经发掘是一丛精美绝伦的大珊瑚，在珊瑚内竟又藏有一只精致木箱，箱中盛满金币、银币和珍奇宝物。菲波斯狂喜万分，他在岛上待了3个月，疯狂地寻觅，整整30吨金银珠宝装满了他的纵帆船，他实现了发财梦。一时间许多真真假假的“藏宝图”应运而生，充斥欧洲，高价出卖，不少发财狂们重金购买，不惜血本，结果呢？不少人或葬身海底，或暴死荒岛，或苦苦寻觅，久远踪影。海盗的遗产成了一个充满诱惑的谜团。</p>
+<p>在澳大利亚，有一个名为洛豪德的小岛，该岛并非鸟语花香、景色宜人的胜地，然而，“岛不在美，有宝则名”。相传岛上藏有无数财宝，周围海底也铺满耀眼炫目的宝石。17世纪70年代，一位名叫威廉?菲波斯的人，在偶然中发现一张有关洛豪德岛的地图，图上标有西班牙商船“黄金”号的沉没地，他惊喜若狂，感觉到一个发财的机会到来了。原来，“黄金”号商船有一段神秘的故事，那是在16世纪50～70年代，西班牙人沿着哥伦布的航迹远征美洲，从印地安人手里掠夺了无数金银珠宝，然后载满船舱回国。然而，他们的行动被海盗们觉察了。于是，海盗们疯狂袭击每一艘过往的商船，惨杀船员，抢夺了大量财宝。如山沉重的财宝，海盗们无法全部带走，于是将剩余部分埋藏在洛豪德岛，并绘制了藏宝图，海贼们发血誓表示严守秘密，以图永享这笔不义之财。哪知海盗们终归是海盗，哪有信用可言，一些阴谋者企图独吞<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%AE%9D%E8%97%8F.md#1">宝藏</a>，一时间血肉横飞，一场火拼留下了具具尸体，胜利者携带藏宝图混迹天下，过着花天酒地、骄奢淫逸的生活，而藏金岛的传说也不胫而走，风靡世界。菲波斯怀揣这张不知真假的藏宝图，登上荒岛，四处勘察，然而他一无所获。正当他徘徊海滩时，无意中脚陷入沙中，触及到一块异物，经发掘是一丛精美绝伦的大珊瑚，在珊瑚内竟又藏有一只精致木箱，箱中盛满金币、银币和珍奇宝物。菲波斯狂喜万分，他在岛上待了3个月，疯狂地寻觅，整整30吨金银珠宝装满了他的纵帆船，他实现了发财梦。一时间许多真真假假的“藏宝图”应运而生，充斥欧洲，高价出卖，不少发财狂们重金购买，不惜血本，结果呢？不少人或葬身海底，或暴死荒岛，或苦苦寻觅，久远踪影。海盗的遗产成了一个充满诱惑的谜团。</p>
 <p><B>二、地下陵寝的宝藏 </B></p>
 <p>秘鲁政府近年宣布：对古印加奇姻王国首都废墟的地下国王陵墓加以严格保护，不允许人们随便破坏它，并且在严密防卫下，由两位经验丰富的秘鲁考古学家花费几年时间在此地挖掘。他们在寻找什么呢？在16世纪下叶，一位名叫古特尼茨的西班牙商人探险来到此地，他由一位印第安部落头人引路，穿过错综复杂、九曲十折的地下迷宫，来到这座地下的国王陵寝，瞬间，这位青年商人被金光灿烂的黄金珠宝照耀得不知所措，这座陵寝内摆设满珍奇珠宝，其中包括一些镶有翡翠眼睛并用黄金铸造的鱼，印第安头人平静地告诉面前这位惊恐万分的西班牙人，只要他协助建设当地的公共工程，这些黄金便全归他了。无须犹豫，这无疑是一个千载难逢的良机，古特尼茨拚命点头，于是，他如愿以偿以一个巨富的姿态返回西班牙。至于古特尼茨捞得多少黄金可能永久成为未知数，但根据1576年的西班牙税收记录记载，古特尼茨不仅向国王密报了这处“小鱼”宝藏，而且慷慨地奉献了900磅黄金为税金，可见，他得到了多少财富。然而，在他之后的无数探宝者却没有这种运气，但总有人提供了激动人心的线索：在当地废墟下面，隐藏有一处“大鱼”宝藏，里面摆满更多陪葬的黄金物品。此说真真假假，为陵寝蒙上了一层神秘的迷雾，而揭开这层迷雾，则有待于那两位秘鲁考古学家的运气了。</p>
 <p><B>三、金银岛上埋藏的秘密 </B></p>
@@ -31,42 +31,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/9/8/3/n2610436.md#1">逃过共产党毒手 戈壁沉睡70年宝藏重生</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/9/8/10/n2619138.md#1">巴菲特投资启蒙书(3)</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/9/8/13/n2622346.md#1">阿富汗国宝守护者终获表彰</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/9/8/16/n2625898.md#1">神传文化造敦煌(六)：结语</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/8/3/n2610436.md#1">逃过共产党毒手 戈壁沉睡70年宝藏重生</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/8/10/n2619138.md#1">巴菲特投资启蒙书(3)</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/8/13/n2622346.md#1">阿富汗国宝守护者终获表彰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/8/16/n2625898.md#1">神传文化造敦煌(六)：结语</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/29/n11223087.md#1" target="_blank">【征文】杨宁：中华文物之殇史无前例</a></li><li><a href="https://github.com/yupkxx301/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/30/n11013193.md#1" target="_blank">北京人赞颂法轮功美好 谢李洪志大师洪恩</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/9/n10899776.md#1" target="_blank">林辉：姚依林回忆“一二九运动”证实三件事</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/4/n10890780.md#1" target="_blank">天空出现“真善忍” 西澳女子圆梦</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/3/n12378183.md#1">书生神游天宫 原来世人多从天上来</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/2/n12374931.md#1">《傲慢与偏见》：19世纪名著至今仍能启迪人心</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/6/21/n12202372.md#1">龄官画蔷  从此各人得各人的眼泪</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/4/n12380954.md#1">【馨香雅句】原来这项技能承传千年 曾让中国人武艺高强</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/8/23/n12352129.md#1">到手钱财如水流？古今三故事 道出败财因由</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/10/n12395139.md#1">【新闻看点】党媒呛台扬言开战 中共能挡美军？</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/10/n12395255.md#1">【时事纵横】习抄袭港人金句？中南海最恐惧啥</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/8/26/n12358513.md#1">【欺世大观】鲜为人知：五面间谍被毛泽东逼疯</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/9/n12390634.md#1">李克强与习“不同调”神情恍惚？</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/9/n12390183.md#1">中共报复捷克钢琴商 富豪出手买下送学校</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/9/n12391877.md#1">中共大使刘晓明追色情帖 英国政治家嘲讽</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/9/n12391838.md#1">为家人挺过第18次化疗 余苑绮：最想回家</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/8/n12389885.md#1">32岁继女近照曝光 林青霞曾获赞世上最好继母</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/8/n12389717.md#1">阿娇厦门动第二次手术 头部表面一层缝66针</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/8/n12390081.md#1">改编《木兰诗》讽撑警主角 视网膜获赞太有才</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/10/n12395006.md#1">新疆争议发酵？传中共下令禁报《花木兰》</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/9/n12390935.md#1">定力考验：哈士奇和黄金猎犬谁会偷吃烤鸡？</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/9/n12391179.md#1">中共若入侵台湾 美军空投水雷可阻止？</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/9/n12392244.md#1">不沾锅别用错 厨房6样东西使用不当小心吃毒</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/9/n12392319.md#1">按摩3穴位肩颈变柔软 中医教你挥别肩颈痛</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/9/n12391049.md#1">获美65所大学录取 他还是一名鹰级童子军</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yupkxx301/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yupkxx301/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/9/10/26/n2701154.htm">10大惊世宝藏 橡树下藏1亿美元“钱坑”</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/9/10/26/n2701154.htm">10大惊世宝藏 橡树下藏1亿美元“钱坑”</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/yupkxx301/djy/blob/master/gb/9/10/26/n2701154.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yupkxx301/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yupkxx301/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yupkxx301/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/9/10/26/n2701154.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
